@@ -5,6 +5,7 @@ date: dd/mm/yyyy
     - allowed SuperUser to create project where it is automatically set as Project Manager.
   * improved authorization checks to several APIs
   * improved messaging in the update routines
+  * added support in Sheet2RDF for single tables in MySQL, MariaDB and PostgreSQL
   * updated dependency on CODA 1.7.5-SNAPSHOT
   * updated dependency on MAPLE 0.0.11-SNAPSHOT
   * updated dependency on Sheet2RDF 5.0.0-SNAPSHOT (to manage DB tables)
